--- a/app/src/main/res/values-v31/themes.xml
+++ b/app/src/main/res/values-v31/themes.xml
@@ -2,5 +2,6 @@
 <resources>
 
     <style name="Theme.Sudoku" parent="Theme.Material3.DayNight.NoActionBar">
+        <item name="android:windowSplashScreenIconBackgroundColor">@color/ic_launcher_background</item>
     </style>
 </resources>
