icon buttons and cleanup

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="ic_launcher_background">#3DDC84</color>
+    <color name="omni_logo_color">#a1c729</color>
+    <color name="ic_launcher_background">@color/omni_logo_color</color>
 </resources>
