--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.Sudoku" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Theme.Sudoku" parent="android:Theme.Material.Light.NoActionBar">
     </style>
 </resources>
